--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,6 +1,16 @@
 #welcome-screen {
+  background-image: url('/public/image.png');
   text-align: center;
+  background-position: 0 25px;
+  background-size: 300px;
+  background-repeat: no-repeat;
+  padding-left: 300px;
+  min-height: 300px;
 }
 #welcome-screen img {
   max-width: 400px;
+}
+
+#welcome-screen .markdown-body p {
+  text-align: left;
 }
